--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,16 @@
 #root {
-  max-width: 1580px;
-  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
   padding: 4rem;
   text-align: center;
+  border: 2px solid #7CFFB2;
+  border-radius: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  background-color: #000;
+  color: #7CFFB2;
+  font-family: "JetBrains Mono", monospace;
 }
