--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color:#7CFFB2;
+  color: #7cffb2;
   background-color: #000000;
 
   font-synthesis: none;
@@ -12,7 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  border: #7CFFB2;
+  border: #7cffb2;
 }
 
 body {
